9cc.ebnf
program    = define*

define     = "int" ident "(" params? ")" block
params     = "int" ("*")* ident ("," params)*
block      = "{" stmt* "}"

stmt       = expr ";"
             | block
             | "return" expr ";"
             | "if" "(" expr ")" stmt ("else" stmt)?
             | "while" "(" expr ")" stmt
             | "for" "(" expr? ";" expr? ";" expr? ")" stmt
             | "int" ("*")* ident ("[" num "]")? ";"

expr       = assign
assign     = equality ("=" assign)?
equality   = relational ("==" relational | "!=" relational)*
relational = add ("<" add | "<=" add | ">" add | ">=" add)*
add        = mul ("+" mul | "-" mul)*
mul        = unary ("*" unary | "/" unary)*
unary      = "sizeof" unary
             | ("+" | "-")? primary
             | ("*" | "&") unary
primary    = num | ident ("(" args? ")")? | "(" expr ")"
args       = expr ("," args)*
